# aprsd-repeat-plugins

./: AUTHORS  ChangeLog  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
aprsd_repeat_plugins/: __init__.py  aprsd_repeat_plugins.py  cli.py  help.py  lat_lon.py  nearest.py  version.py
aprsd_repeat_plugins/conf/: __init__.py  opts.py  repeat.py
docs/: clean_docs.py  conf.py  history.rst  index.rst  readme.rst
docs/apidoc/: aprsd_repeat_plugins.conf.rst  aprsd_repeat_plugins.rst  modules.rst
docs/superpowers/plans/: 2026-03-19-tiered-help-implementation.md
docs/superpowers/specs/: 2026-03-19-tiered-help-design.md
tests/: test_aprsd_repeat_plugins.py  test_help.py
